--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+            submodules: recursive
 
       - uses: denoland/setup-deno@v1
-
-      - run: deno task build
 
       - run: deno compile -A --target ${{ matrix.target }} --unstable-kv --include worker.ts --output mtkruto-server main.ts
     
