Add test job, cache dependencies in the build job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,21 +10,60 @@ jobs:
   build:
     strategy:
       matrix:
-        target: [x86_64-unknown-linux-gnu, aarch64-unknown-linux-gnu, x86_64-pc-windows-msvc, x86_64-apple-darwin, aarch64-apple-darwin]
+        target:
+          [
+            x86_64-unknown-linux-gnu,
+            aarch64-unknown-linux-gnu,
+            x86_64-pc-windows-msvc,
+            x86_64-apple-darwin,
+            aarch64-apple-darwin,
+          ]
 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-            submodules: recursive
+          submodules: recursive
 
       - uses: denoland/setup-deno@v1
 
+      - uses: actions/cache@v4
+        with:
+          path: ~/.cache/deno/deps
+          key: ${{ runner.os }}-${{ hashFiles('deno.lock') }}
+
       - run: deno compile -A --target ${{ matrix.target }} --unstable-kv --include worker.ts --output mtkruto-server main.ts
-    
+
       - run: tar -czf mtkruto-server-${{ matrix.os }}.tar.gz mtkruto-server*
 
       - uses: actions/upload-artifact@v4
         with:
-            name: ${{ matrix.target }}
-            path: mtkruto-server-${{ matrix.os }}.tar.gz
+          name: ${{ matrix.target }}
+          path: mtkruto-server-${{ matrix.os }}.tar.gz
+
+  test:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+          - platform: ubuntu-latest
+            cache_path: ~/.cache/deno/deps
+          - platform: macos-latest
+            cache_path: ~/Library/Caches/deno/deps
+          - platform: windows-latest
+            cache_path: ~\AppData\Local\deno\deps
+
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - uses: denoland/setup-deno@v1
+
+      - uses: actions/cache@v4
+        with:
+          path: ${{ matrix.cache_path }}
+          key: ${{ runner.os }}-${{ hashFiles('deno.lock') }}
+
+      - run: deno task test
