--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,9 @@
 {
+  "unstable": ["kv"],
   "exclude": ["./MTKruto/"],
   "tasks": {
     "test": "deno run -A tests/_run.ts",
-    "build": "deno compile -A --unstable-kv --include worker.ts --output mtkruto-server https://raw.githubusercontent.com/MTKruto/server/main/main.ts"
+    "build": "deno compile $BUILD_ARGS -A --include worker.ts --output mtkruto-server main.ts"
   },
   "imports": {
     "mtkruto/": "./MTKruto/",
